--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ torch = ">=2.0.0, !=2.0.1, !=2.1.0"
 peft = "^0.5.0"
 matplotlib = "3.6.1"
 tabulate = "^0.9.0"
+pycountry = "^22.3.5"
+nltk = "^3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
